Fixed maintanibility issues found by SonarQube cloud.
Changed assertThrows to assertThatExceptionOfType..., from
Stream.collect(Collectors.toList) to Stream.toList

Also added MongoDoctorRepository class to pit mutation testing target
classes and tests